@@ -10,3 +10,4 @@ noascii = Åuŧølīß
 
 [no-interpolation]
 nointerpolation = %(noascii)
+with-dashes = no-dash
